#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([libdnspod], [0.1], [kroderia@gmail.com])
AC_CONFIG_SRCDIR([src/dnspod.cpp])
AC_CONFIG_HEADERS([config])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
#AC_CHECK_LIB([curl], 
#			[curl_easy_init], 
#			[], 
#			[echo "Error! libcurl is needed."
#			 exit -1
#			 ])
#AC_CHECK_LIB([json],
#			[read],
#			[],
#			[echo "Error! jsoncpp is needed."
#			 exit -1
#			 ])

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h]) 

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.

AC_OUTPUT(Makefile)
